option java_package = "com.hawk.game.protocol";

import "Protocol/Attribute.proto";

message GemInfo
{
	// 宝石位置
	required int32 pos = 1;
	// 宝石id
	required int32 gemItemId = 2;
}

message EquipInfo
{
	required int64  id = 1;
	required int32  equipId = 2;
	//装备品级
	required int32  stage = 3;
	//装备强化等级
	required int32  level = 4;
	//宝石信息
	repeated GemInfo gemInfos = 5;
	//附加属性信息
	repeated Attr  attrDatas = 6;
	required int32  status = 7;
	optional  int32 expireTime = 8;
}

//装备信息同步
message HSEquipInfoSync
{
	repeated EquipInfo equipInfos = 1;
}

// 装备购买道具
message HSEquipBuy
{
	required int32 equipId = 1;	
	required int32 equipCount = 2;
	required int32 stage = 3;
	optional int32 level = 4;
}

// 装备购买道具
message HSEquipBuyRet
{
	required int32 equipId = 1;	
	required int32 equipCount = 2;
}

// 合成装备
message HSEquipCompose
{
	required int32 equipId = 1;
	required int32 relatedItemId = 2;
}

// 合成装备返回
message HSEquipComposeRet
{
	required int32 equipId = 1;
	optional int32 stage = 2;
	optional int32 level = 3;
}

// 装备升级
message HSEquipIncreaseLevel
{
	required int64 id= 1;
}

// 装备升级返回
message HSEquipIncreaseLevelRet
{
	required int64 id = 1;
	optional int32 stage = 2;
	optional int32 level = 3;
}

// 装备进阶
message HSEquipIncreaseStage
{
	required int64 id = 1;
}

// 装备进阶返回
message HSEquipIncreaseStageRet
{
	required int64 id = 1;
	optional int32 stage = 2;
	optional int32 level = 3;
}

// 装备穿戴
message HSEquipMonsterDress
{
	required int64 id  = 1;
	required int32 monsterId = 2;
}

// 装备穿戴返回
message HSEquipMonsterDressRet
{
	optional int64 id  = 1;
	optional int32 monsterId = 2;
}

// 装备卸载
message HSEquipMonsterUndress
{
	required int64 id  = 1;
}

// 装备卸载返回
message HSEquipMonsterUndressRet
{
	optional int64 id  = 1;
	optional int32 monsterId = 2;
}

// 装备替换 
message HSEquipMonsterReplace
{
	required int64 id  = 1;
	optional int32 monsterId = 2;
}

// 装备卸载返回
message HSEquipMonsterReplaceRet
{
	optional int64 id  = 1;
	optional int32 monsterId = 2;
}