import "Protocol/Const.proto";
import "Protocol/Skill.proto";

option java_package = "com.hawk.game.protocol";

// struct-------------------------------------------------------

message HSMonster
{
	required int32 monsterId = 1;
	required string cfgId = 2;
	required int32 stage = 3;
	required int32 level = 4;
	required int32 exp = 5;
	required int32 lazy = 6;
	required int32 ai = 7;
	repeated HSSkill skill = 8;
}

// protocol-----------------------------------------------------

message HSMonsterInfoSync
{
	repeated HSMonster monsterInfo = 1;
}

// MONSTER_ADD_S
message HSMonsterAdd
{
	required HSMonster monster = 1;
	optional RewardReason reason = 2 [default = SYS_PRESENT];
}

// MONSTER_CATCH_C
message HSMonsterCatch
{
	required string cfgId = 1;
	optional int32 stage = 2 [default = 0];
	optional int32 level = 3 [default = 1];
	optional int32 lazy = 4 [default = 1];
	optional int32 ai = 5 [default = 1];
	repeated HSSkill skill = 6;
}

// MONSTER_BREAK_C
message HSMonsterBreak
{
	required int32 monsterId = 1;
}

// MONSTER_BREAK_S
message HSMonsterBreakRet
{
	required int32 status = 1;
	required int32 monsterId = 2;
}

//MONSTER_FEED_C
message HSMonsterFeed
{
	required int32 monsterId = 1;
	required int32 foodMonsterId = 2;
}

// MONSTER_FEED_S
message HSMonsterFeedRet
{
	required int32 status = 1;
	required int32 monsterId = 2;
	required int32 foodMonsterId = 3;
	optional int32 exp = 4;
	optional int32 level = 5;
}